--- a/design/custom.css
+++ b/design/custom.css
@@ -30,7 +30,8 @@ body,
 .DataList .Meta,
 .SiteSearch .InputBox,
 dl.About dt,
-dl.About dd {
+dl.About dd,
+.ButtonBarMarkupHint {
     font-size: .9em;
 }
 
@@ -190,6 +191,17 @@ dl.About dd {
         opacity: 1;
     }
 }
+
+.BarWrap {
+    background: none;
+    border: none;
+    padding-bottom: 5px;
+}
+
+.ButtonBar .ButtonWrap {
+    border:none;
+}
+
 /* Pure */
 a,
 .FlyoutMenu a, a:hover, a.TextColor:hover, a:hover .TextColor {
@@ -518,6 +530,9 @@ legend {
     box-shadow: none;
 }
 
+textarea.MultiComplete {
+    min-height: 38px;
+}
 
 /* Layout */
 
