--- a/design/custom.css
+++ b/design/custom.css
@@ -27,6 +27,7 @@ body,
 }
 
 .ItemDiscussion .Meta,
+.Meta .HasNew,
 .DataList .Meta,
 .SiteSearch .InputBox,
 dl.About dt,
@@ -243,12 +244,22 @@ a,
 }
 
 .MItem.Category a,
+.Meta .HasNew,
 .Count,
 .Tag {
     background: #819AA9;
     color: white;
     padding: .1em .4em .2em;
     border-radius: 2px;
+}
+
+.JustNew {
+    display: inline;
+}
+
+.Meta .HasNew {
+    background-color: #0078e7;
+	font-weight: normal;
 }
 
 a.Bookmarked:hover {
