edit profile flyout fontsize

--- a/design/custom.css
+++ b/design/custom.css
@@ -15,6 +15,7 @@ body,
 .MeBox .Username,
 .PopList .Item.Title,
 .PopList .Item.Title a,
+.ButtonGroup .Dropdown,
 .OptionsMenu,
 .MenuItems,
 .Button,
