--- a/design/custom.css
+++ b/design/custom.css
@@ -114,6 +114,10 @@ input.SmallInput:focus, input.InputBox:focus, textarea:focus {
     color: #666;
 }
 
+a.ChangePicture {
+    max-width: 200px;
+}
+
 dl.About dt {
     background-position: 2px -135px;
 }
